# python_clean_code

./: .gitignore  README.md  pyproject.toml
annotations/: __anotations__.py  __anotations__.py~  readme.md
anti-patterns/: ingeritence.py
antipatterns/: extend_builtin_types.py  mutable_function_arguments.py
classes/: my_own_callable_class.py
containers/: my_own_container.py
context_managers/: decorator_ctx_manager.py  generator_ctx_manager.py  simple_ctx_manager.py
decorators/: README.md  class_decorator.py  class_decorator_with_arguments.py  function_decorator.py  function_decorator_with_arguments.py  separation_of_concerns.py
descriptors/: README.md  __slots__.py  data_descriptor.py  descriptor__delete__.py  descriptor__get__.py  descriptor__set__.py  descriptor__set__recursion_problem.py  descriptor_as_serializer.py  descriptor_as_validator.py  descriptor_example_advance.py  descriptor_simple.py  descriptor_use_cases.py  non_data_descriptor.py
design/: agni.py  dry.py  eafp.py  inheritance.py  kis.py  orthogonality.py
docstrings/: __doc__.py  readme.md
exceptions/: assertions.py  logging_exception.py
functions/: mutable_arguments.py  too_many_arguments.py
generators/: generator_chaining.py  generator_iterator_on_my_own.py  generator_return_value.py  generator_send_and_recive_data_from_sub-generator.py  generator_simple_example.py
indexes_and_slices/: #my_dumb_slice.py#  .#my_dumb_slice.py  my_dumb_slice.py  my_own_slice.py  slices.py
iterators/: #my_own_iterable__next__.py#  .#my_own_iterable__next__.py  how_iteration_works.py  (+2 more)
(+29 files in other folders)
